# ten_east

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json
config/: settings.py  urls.py
portal/: admin.py  forms.py  models.py  views.py
portal/static/css/: styles.css
portal/static/src/: app.js.map  app.ts
portal/templates/: allocations.html  base.html  home.html  landing.html  referral.html  signup.html
portal/templates/offerings/: card.html  items.html  offerings_detail.html  offerings_list.html  past_items.html
portal/templates/registration/: login.html
sample_data/: README.md  investor_type.json  offering.json  offering_tag.json
tests/: test_portal_views.py
